--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,15 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: inherit;
+}
+
+@font-face {
+	font-family: 'Georgia';
+	src: url('../fonts/georgia.eot');
+	src: local('☺'), url('../fonts/georgia.woff') format('woff'), url('../fonts/georgia.ttf') format('truetype'), url('../fonts/georgia.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
 .bg-white {background-color: #FFFFFF !important;}
